// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCollapsibleNavGroup testClass1 testClass2"
  data-test-subj="test subject string"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background dark is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--dark"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background light is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--light"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background none is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props iconProps renders data-test-subj 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <span
          data-euiicon-type="bolt"
          data-test-subj="DTS"
        />
      </div>
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props iconSize is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <span
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props iconType is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <span
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props title is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props titleElement can change the rendered element to h2 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem"
      >
        <h2
          class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
          id="id__title"
        >
          Title
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize can be larger 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup throws a warning if iconType is passed without a title 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup when isCollapsible is true accepts accordion props 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-label="aria-label"
      class="euiAccordion__button euiAccordion__buttonReverse euiCollapsibleNavGroup__heading testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__iconWrapper"
      >
        <span
          class="euiAccordion__icon"
          data-euiicon-type="arrowRight"
        />
      </span>
      <span
        class="euiIEFlexWrapFix"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem"
          >
            <h3
              class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="id"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup when isCollapsible is true will render an accordion 1`] = `
<div
  class="euiAccordion euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      class="euiAccordion__button euiAccordion__buttonReverse euiCollapsibleNavGroup__heading"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__iconWrapper"
      >
        <span
          class="euiAccordion__icon"
          data-euiicon-type="arrowRight"
        />
      </span>
      <span
        class="euiIEFlexWrapFix"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem"
          >
            <h3
              class="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="id"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;
